// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppImage 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.0.0.AppImage",
      "safeArtifactName": "TestApp-1.0.0-x86_64.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.0.AppImage",
          },
        ],
        "path": "Test App ßW-1.0.0.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`AppImage 2`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.0.1.AppImage",
      "safeArtifactName": "TestApp-1.0.1-x86_64.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.1.AppImage",
          },
        ],
        "path": "Test App ßW-1.0.1.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`AppImage 3`] = `
Object {
  "files": Array [
    Object {
      "blockMapSize": "@blockMapSize",
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW-1.0.1.AppImage",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`AppImage 4`] = `
Array [
  "Test App ßW-1.0.1.AppImage",
]
`;

exports[`AppImage ia32 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "ia32",
      "file": "Test App ßW-1.0.0-i386.AppImage",
      "safeArtifactName": "TestApp-1.0.0-i386.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-linux-ia32.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.0-i386.AppImage",
          },
        ],
        "path": "Test App ßW-1.0.0-i386.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`AppImage ia32 2`] = `
Object {
  "linux": Array [
    Object {
      "arch": "ia32",
      "file": "Test App ßW-1.0.1-i386.AppImage",
      "safeArtifactName": "TestApp-1.0.1-i386.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-linux-ia32.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.1-i386.AppImage",
          },
        ],
        "path": "Test App ßW-1.0.1-i386.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`AppImage ia32 3`] = `
Object {
  "files": Array [
    Object {
      "blockMapSize": "@blockMapSize",
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW-1.0.1-i386.AppImage",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`AppImage ia32 4`] = `
Array [
  "Test App ßW-1.0.1-i386.AppImage",
]
`;

exports[`Mac Intel 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.0.0-mac.zip",
      "safeArtifactName": "TestApp-1.0.0-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.0.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.0-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`Mac Intel 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac Intel 3`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.1-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.1-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.0.1-mac.zip",
      "safeArtifactName": "TestApp-1.0.1-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.0.1-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.1-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`Mac Intel 4`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac Intel 5`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW-1.0.1-mac.zip",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`Mac Intel 6`] = `
Array [
  "Test App ßW-1.0.1-mac.zip",
]
`;

exports[`Mac arm64 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.0-arm64-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.0-arm64-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
    Object {
      "arch": "arm64",
      "file": "Test App ßW-1.0.0-arm64-mac.zip",
      "safeArtifactName": "TestApp-1.0.0-arm64-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.0.0-arm64-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.0-arm64-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`Mac arm64 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac arm64 3`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.1-arm64-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.1-arm64-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
    Object {
      "arch": "arm64",
      "file": "Test App ßW-1.0.1-arm64-mac.zip",
      "safeArtifactName": "TestApp-1.0.1-arm64-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.0.1-arm64-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.1-arm64-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`Mac arm64 4`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac arm64 5`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW-1.0.1-arm64-mac.zip",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`Mac arm64 6`] = `
Array [
  "Test App ßW-1.0.1-arm64-mac.zip",
]
`;

exports[`Mac universal 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.0-universal-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.0-universal-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
    Object {
      "arch": "universal",
      "file": "Test App ßW-1.0.0-universal-mac.zip",
      "safeArtifactName": "TestApp-1.0.0-universal-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.0.0-universal-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.0-universal-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`Mac universal 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac universal 3`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.0.1-universal-mac.zip",
          },
        ],
        "path": "Test App ßW-1.0.1-universal-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
    Object {
      "arch": "universal",
      "file": "Test App ßW-1.0.1-universal-mac.zip",
      "safeArtifactName": "TestApp-1.0.1-universal-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.0.1-universal-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.0.1-universal-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`Mac universal 4`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.0.1",
  "LSApplicationCategoryType": "your.app.category.type",
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`Mac universal 5`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW-1.0.1-universal-mac.zip",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`Mac universal 6`] = `
Array [
  "Test App ßW-1.0.1-universal-mac.zip",
]
`;

exports[`nsis 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW Setup 1.0.0.exe",
          },
        ],
        "path": "Test App ßW Setup 1.0.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.0.0.exe",
      "safeArtifactName": "TestApp-Setup-1.0.0.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.0.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.0.0.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`nsis 2`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW Setup 1.0.1.exe",
          },
        ],
        "path": "Test App ßW Setup 1.0.1.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.0.1.exe",
      "safeArtifactName": "TestApp-Setup-1.0.1.exe",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW Setup 1.0.1.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.0.1.exe.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`nsis 3`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW Setup 1.0.1.exe",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`nsis 4`] = `
Array [
  "Test App ßW Setup 1.0.1.exe",
]
`;

exports[`web installer 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "Test App ßW Web Setup 1.0.0.exe",
          },
        ],
        "packages": Object {
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.0-x64.nsis.7z",
            "path": "TestApp-1.0.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "Test App ßW Web Setup 1.0.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.0.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.0.0.exe",
      "updateInfo": Object {
        "packages": Object {
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.0-x64.nsis.7z",
            "path": "TestApp-1.0.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.0.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 2`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "Test App ßW Web Setup 1.0.1.exe",
          },
        ],
        "packages": Object {
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.1-x64.nsis.7z",
            "path": "TestApp-1.0.1-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "Test App ßW Web Setup 1.0.1.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.0.1.exe",
      "safeArtifactName": "TestApp-WebSetup-1.0.1.exe",
      "updateInfo": Object {
        "packages": Object {
          "x64": Object {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.1-x64.nsis.7z",
            "path": "TestApp-1.0.1-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.0.1-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 3`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
    },
  ],
  "packages": Object {
    "x64": Object {
      "blockMapSize": "@blockMapSize",
      "file": "TestApp-1.0.1-x64.nsis.7z",
      "path": "TestApp-1.0.1-x64.nsis.7z",
      "sha512": "@sha512",
      "size": "@size",
    },
  },
  "path": "Test App ßW Web Setup 1.0.1.exe",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`web installer 4`] = `
Array [
  "Test App ßW Web Setup 1.0.1.exe",
  "package-1.0.1.7z",
]
`;
